# NameAI

./: .gitignore  pyproject.toml
configs/: inference.yaml  model.yaml  training.yaml
data/curated/: iconic_brands.jsonl  slop_blocklist.txt
nameai/: __init__.py  __main__.py  config.py
nameai/cli/: app.py
nameai/data/: build_dataset.py  clean.py  curated_names.py  dataset.py  download_wikipedia.py
nameai/inference/: filter.py  generator.py  sampler.py
nameai/model/: __init__.py  decoder.py  encoder.py  layers.py  nameformer.py  positional.py
nameai/scoring/: phonaesthetics.py  pronounceability.py  uniqueness.py
nameai/tokenizer/: __init__.py  bpe_tokenizer.py  char_tokenizer.py  train_tokenizer.py
nameai/training/: loss.py  pretrain.py  scheduler.py  trainer.py
scripts/: runpod_setup.sh
tests/: test_model.py
